# tracker-rs

./: .gitignore  Cargo.toml  Makefile  README.md  config.example.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/anti_cheat/: announce_interval.rs  duplicate_peer.rs  ghost_seeder.rs  mod.rs  ratio_check.rs  speed_check.rs
src/api/: client.rs
src/bencode/: encoder.rs  mod.rs  response.rs
src/core/: config.rs  error.rs  mod.rs  routes.rs  startup.rs  state.rs  tracing_init.rs
src/handlers/: admin.rs  announce.rs  blacklist.rs  fallback.rs  health.rs  metrics.rs  mod.rs  update.rs
src/metrics/: collector.rs
src/models/: admin.rs  mod.rs  peer.rs  torrent.rs  user.rs
src/security/: client_blacklist.rs  ip_blacklist.rs  mod.rs  rate_limiter.rs
src/stores/: mod.rs  peer_store.rs  torrent_cache.rs  user_cache.rs
src/utils/: auth.rs  hex.rs  mod.rs  time.rs
src/validation/: params.rs
src/wal/: mod.rs  wal.rs
